Implemented and tested implicit frequency probability calculations.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,16 +3,25 @@ project (morfessor)
 project (morfessor-tests)
 set(CMAKE_BUILD_TYPE Debug)
 
-find_package(Threads)
+# My code
 include_directories("include")
-link_directories(/usr/local/lib)
-
 file(GLOB TESTS "tests/*.cc")
 set(SOURCES "src/corpus.cc" "src/lexicon.cc" "src/morph.cc" "src/morph_node.cc")
 set(MAINSOURCE "src/morfessor_main.cc")
-
 add_executable(morfessor ${SOURCES} ${MAINSOURCE})
 add_executable(morfessor-tests ${SOURCES} ${TESTS})
-target_link_libraries(morfessor-tests /usr/local/lib/gtest_main.a ${CMAKE_THREAD_LIBS_INIT})
 set_property(TARGET morfessor PROPERTY CXX_STANDARD 14)
 set_property(TARGET morfessor-tests PROPERTY CXX_STANDARD 14)
+
+# Boost Math headers
+find_package(Boost 1.58)
+include_directories(${Boost_INCLUDE_DIRS})
+
+# GoogleTest
+link_directories(/usr/local/lib)
+target_link_libraries(morfessor-tests /usr/local/lib/gtest_main.a)
+
+# Threads for GoogleTest
+find_package(Threads)
+target_link_libraries(morfessor-tests ${CMAKE_THREAD_LIBS_INIT})
+
